@@ -242,12 +242,12 @@ rubia-biofusion-science-pack=Biofusion science packs
 
 [technology-description]
 ;Anything dropping from orbit will be bombarded with garbage and take severe impact damage. Normal rockets taking off from the surface are also not safe. Better technology is needed to deal with it. 
-planet-discovery-rubia=A windy planet covered in garbage. Low gravity and high winds constantly pick up wreckage and fling it around at high speed, including in low orbit. Helpful microbes live on this planet, and allow transforming junk into more useful materials. \n[img=utility/warning_icon]See "Tips and Tricks" for a planet briefing.
+planet-discovery-rubia=A windy planet covered in garbage. Low gravity and high winds constantly pick up wreckage and fling it around at high speed, including in low orbit. Helpful microbes live on this planet, and allow transforming junk into more useful materials. \n[img=utility/warning_icon]See [font=semibold]"Tips and Tricks"[/font] for a planet briefing.
 operation-iron-man=Advanced guidance systems and armored pods allow safely dropping cargo pods through Rubia's hostile airspace.
 
 rubia-unknown-technology=You must complete more research on Rubia to see what lies ahead.
 rubia-progression-stage1=Become one with the waste. Science is done a bit differently around these parts.
-rubia-progression-stage2=Your diligent study of the garbage has led you to discover an unlikely friend--a little guy you tastelessly named [item=rubia-bacteria-B].
+rubia-progression-stage2=Your diligent study of the garbage has led you to discover an unlikely friend--a little guy you tastelessly named __ITEM__rubia-bacteria-B__.
 rubia-progression-stage3=You've studied the trash. Bathed in it. Been molded by it. You are finally ready to take your junk skills to the next level.
 craptonite-processing=Just because you discovered the most durable material in the galaxy, and you can technically name it whatever you want, doesn't mean that you should.
 rubia-armored-train=You are finally able to make trains capable of braving the winds of planet Rubia.
@@ -380,6 +380,12 @@ forgot-roboport-failsafe-part2=(Loup&Snoop) And that roboport isn't free. I'm ea
 rubia-first-blast-off-part1=(Rubia) And so the engineer blasted off in his crappy rocket, eager to discover more materials and planets, excited to give them names even worse than on Rubia.
 rubia-first-blast-off-part2=(Rubia) There is truly no place in the cosmos safe from this menace.
 rubia-first-blast-off-part3=(Loup&Snoop) Congrats on beating Rubia. I always doubted you.
+
+;WIP (unused)
+rubia-shield-warning-convo-part1=(exfret) There's no way he'll figure it out. He's too stupid.
+rubia-shield-warning-convo-part2=(Loup&Snoop) I want to believe
+rubia-shield-warning-convo-part3=(exfret) he'll definitely splat lmao
+rubia-shield-warning-convo-part4=(Loup&Snoop) 
 
 [tips-and-tricks-item-name]
 rubia-briefing=Rubia briefing
