@@ -2,6 +2,7 @@
 Version: 0.69.12
 Date: ????
   Changes:
+    - Maraxsis compatibility.... again.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.11
 Date: 2025-05-15
